namespaces/gym/ui/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gym-ui
  namespace: gym
  labels:
    app: gym-ui
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gym-ui
  template:
    metadata:
      labels:
        app: gym-ui
    spec:
      containers:
        - name: gym-ui-container
          image: ghcr.io/wilsongodoi/gym-ui:latest
          ports:
            - containerPort: 80
          resources:
            limits:
              memory: "512Mi"
              cpu: "500m"
            requests:
              memory: "256Mi"
              cpu: "250m"
