namespaces/gym/ui/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gym-ui-service
  namespace: gym
spec:
  selector:
    app: gym-ui
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
